--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 			<!-- http://css-snippets.com/drop-down-navigation -->
 	<body class="news">
+		<div class="grid">
 		<div class="container">
 		<header>
 			<a class="navbar-brand" href="#">Craftsy Moments</a>
@@ -38,73 +39,28 @@
 	    </div>
 	  </header>
 	</div>
+	<aside class="sidebar-left">
+
+  </aside>
+
+  <article>
+
+  </article>
+
+  <aside class="sidebar-right">
+
+  </aside>
+
 
 		<div class='jumbotron'><!--grey background on webpage-->
-	    <div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
-	    <div class=”row”>
-	    <div class="col-xs-1">
+		<div id="text" class="text-center">
 
-				<div id="buzz" class="text-center">
-			    <div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
-						<!--<span class="boxed">
-							<h2>What are people saying?</h2>
-			    <div class=”row”> <!--places div buzz in a row-->
-			   <!-- <div class="col-sm-8"> <!--places people images in line with each other on webpage-->
-			     <!-- <img class="img-responsive" src='images/craft.jpeg'>-->
-			        <!--<blockquote>-->
-			    		<!--<p>These sandwiches are the best I've ever tasted, for sure.</p>
-						</span>
-				  <!--</blockquote>-->
-				<!--</div>
-				</div>-->
-
-
-					<!--<div class="slide">-->
-					<!--<div class="container">
-						<div class="row">
-							<div class="col-xs-8"></div>
-							<div class="col-xs-8">
-								<!--Bootstrap carousel goes here-->
-								<!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-									<ol class="carousel-indicators">
-										<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-										<li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-										<li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-									</ol>
-
-					<!--wrapper for images-->
-					<!--<div class="carousel-inner" role="listbox">
-
-						<div class="item active">
-							<img src="./images/bag.jpg" alt="this is image 1">
-							<div class="carousel-caption">
-								This is slide 1
-							</div>
-						</div>
-						<div class="item">
-							<img src="./images/cut.jpg" alt="this is image 2">
-						<div class="carousel-caption">
-							This is slide 2
-						</div>
-						</div>
-
-						<div class="item">
-							<img src="./images/candle.jpg" alt="this is image 3">
-						<div class="carousel-caption">
-							This is slide 3
-						</div>
-							</div>
-								</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					</div>
-								<div class="col-xs-8"></div>-->
-
-
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">
+		<div class="slide">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12"></div>
+						<div class="col-xs-12">
+							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">
 		  <!-- Indicators -->
 		  <ol class="carousel-indicators">
 		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -115,19 +71,19 @@
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner">
 		    <div class="item active">
-		      <img src="./images/fire.jpeg" alt="First pic">
+		      <img src="./images/photo.jpg" alt="First pic">
 		      <div class="carousel-caption">
 		      	<h3>Caption Text</h3>
 		      </div>
 		    </div>
 		    <div class="item">
-		      <img src="./images/home.jpeg" alt="Second pic">
+		      <img src="./images/baby.jpg" alt="Second pic">
 		      <div class="carousel-caption">
 		      	<h3>Caption Text</h3>
 		      </div>
 		    </div>
 		    <div class="item">
-		      <img src="./images/coffee.jpeg" alt="third pic">
+		      <img src="./images/love.jpg" alt="third pic">
 		      <div class="carousel-caption">
 		      	<h3>Caption Text</h3>
 		      </div>
@@ -145,24 +101,31 @@
 
 				</div>
 			</div>
-	    <!--  <h1>Crafty Moments</h1>-->
+
+			<div class="intro">
+				"Write something, Write something, Write something, Write something, Write something, Write something, Write something,"
+				<br>
+				"Quote something"
+			</div>
 	    </div>
 		</div>
 	</div>
 	</div>
 
-				<div id="mission">
+			<footer>
+				<div id="footer">
 					<div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
-					<h2><small>Our mission</small><br />Join us in helping busy professionals eat healthily</h2>
-
+					<!--<h2><small>Our mission</small><br />Join us in helping busy professionals eat healthily</h2>-->
+					
 					<!--<p class="lead">We believe that healthy workers are more productive workers.</p></br>-->
-					<p class="lead">Providing your team with a healthy lunch each day improves both motivation and morale.</p></br>
-					<p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
+					<!--<p class="lead">Providing your team with a healthy lunch each day improves both motivation and morale.</p></br>
+					<p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>-->
 				</div>
 			</div>
-	    <!--<div class="col-xs-4">
-	      <img class="img-responsive"src='images/craft.png'>
-	    </div>-->
+		</footer>
+	</div>
+	    <script src="javascript/nav.js"></script>
+			<script src="bootstrap/js/bootstrap.js"></script>
 
 
 		</body>
