--- a/pages/basics.html
+++ b/pages/basics.html
@@ -11,6 +11,7 @@
 
 		<!-- http://css-snippets.com/drop-down-navigation -->
 <body class="news">
+	<div class="grid">
 	<div class="container">
 	<header>
 		<a class="navbar-brand" href="#">Craftsy Moments</a>
@@ -38,7 +39,28 @@
   </header>
 </div>
 
+<aside class="sidebar-left">
+	</aside>
+
+	<article>
+
+	</article>
+ </article>
+
+ <aside class="sidebar-right">
+
+ </aside>
+
+
 	<div class='jumbotron'><!--grey background on webpage-->
-    <div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
-    <div class=”row”>
-    <div class="col-xs-1">
+  <!--<div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
+    <!--<div class=”row”>
+    <div class="col-xs-1">-->
+	<footer>
+
+	</footer>
+</div> <!--grid layout-->
+<script src="javascript/nav.js"></script>
+<script src="bootstrap/js/bootstrap.js"></script>
+</body>
+</html>
