--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	          </ul>
 	        </li>
 	        <li class="about"><a class="active" href="pages/about.html">About</a></li>
-	        <li class="news"><a href="pages/diy.html">DIY</a>
+	        <li class="news"><a href="pages/diy.html">Beauty</a>
 	          <ul>
 	            <li><a href="pages/face.html">Face</a></li>
 	            <li><a href="pages/hair.html">Hair</a></li>
@@ -54,12 +54,15 @@
 
 		<div class='jumbotron'><!--grey background on webpage-->
 		<div id="text" class="text-center">
+			<div class="grid_12">
+				<hr/>
+			</div>
 
 		<div class="slide">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12"></div>
-						<div class="col-xs-12">
+					<div class="col-sm-12"></div>
+						<div class="col-sm-12">
 							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">
 		  <!-- Indicators -->
 		  <ol class="carousel-indicators">
@@ -107,25 +110,29 @@
 				<br>
 				"Quote something"
 			</div>
-	    </div>
-		</div>
+		</div><!--container-->
+	</div><!--slide>-->
+
 	</div>
 	</div>
 
 			<footer>
+				<div class="grid_12">
+					<hr/>
+				</div>
 				<div id="footer">
 					<div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
 					<!--<h2><small>Our mission</small><br />Join us in helping busy professionals eat healthily</h2>-->
-					
+
 					<!--<p class="lead">We believe that healthy workers are more productive workers.</p></br>-->
 					<!--<p class="lead">Providing your team with a healthy lunch each day improves both motivation and morale.</p></br>
 					<p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>-->
 				</div>
 			</div>
 		</footer>
-	</div>
-	    <script src="javascript/nav.js"></script>
-			<script src="bootstrap/js/bootstrap.js"></script>
+	<!--</div>-->
+	   <!-- <script src="dist/js/javascript/nav.js"></script>
+			<script src="dist/js/bootstrap/js/bootstrap.js"></script>-->
 
 
 		</body>
