--- a/pages/basics.html
+++ b/pages/basics.html
@@ -11,13 +11,13 @@
 
 		<!-- http://css-snippets.com/drop-down-navigation -->
 <body class="news">
-	<div class="grid">
+	<!--<div class="grid">-->
 	<div class="container">
 	<header>
 		<a class="navbar-brand" href="#">Craftsy Moments</a>
     <div class="nav">
       <ul>
-        <li class="home"><a href="../index.html">Home</a></li>
+        <li class="home"><a class="active" href="#">Home</a></li>
         <li class="tutorials"><a href="basics.html">Basics</a>
           <ul>
             <li><a href="#">menu</a></li>
@@ -25,8 +25,8 @@
             <li><a href="#">menu</a></li>
           </ul>
         </li>
-        <li class="about"><a class="active" href="about.html">About</a></li>
-        <li class="news"><a href="#">DIY</a>
+        <li class="about"><a href="about.html">About</a></li>
+        <li class="news"><a href="diy.html">Beauty</a>
           <ul>
             <li><a href="face.html">Face</a></li>
             <li><a href="hair.html">Hair</a></li>
@@ -39,7 +39,7 @@
   </header>
 </div>
 
-<aside class="sidebar-left">
+<!--<aside class="sidebar-left">
 	</aside>
 
 	<article>
@@ -49,18 +49,62 @@
 
  <aside class="sidebar-right">
 
- </aside>
+ </aside>-->
 
 
 	<div class='jumbotron'><!--grey background on webpage-->
-  <!--<div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
+  <!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
     <!--<div class=”row”>
     <div class="col-xs-1">-->
-	<footer>
+	<!--<footer>-->
+
+	<div class="grid_12">
+		<hr/>
+	</div>
+		<div class="grid_3">
+
+			<img src="../images/baby.jpeg" />
+			<figcaption>Write something</figcaption>
+
+	</div>
+		<div class="grid_3">
+
+			<img src="../images/baby.jpeg" />
+			<figcaption>Write something </figcaption>
+
+		</div>
+		<div class="grid_3">
+
+			<img src="../images/baby.jpeg" />
+			<figcaption>Write something</figcaption>
+
+		</div>
+		<div class="grid_3">
+
+			<img src="../images/baby.jpeg" />
+			<figcaption>Write something</figcaption>
+
+		</div>
+
+		<div class="grid_12">
+			<hr />
+		</div>
+		<article class="grid_6">
+			<p>LWrite something.</p>
+			<p>Something here.</p>
+		 </article>
+		 <article class="grid_6">
+			<p>More content</p>
+			<p>Another paragraph</p>
+		 </article>
+		<div class="grid_12">
+			<h6>copyright @2018</h6>
+		</div>
+	</div>
+	<!-- end of container -->
+</body>
+</html>
+
 
 	</footer>
 </div> <!--grid layout-->
-<script src="javascript/nav.js"></script>
-<script src="bootstrap/js/bootstrap.js"></script>
-</body>
-</html>
