--- a/pages/face.html
+++ b/pages/face.html
@@ -39,6 +39,20 @@
 </div>
 
 	<div class='jumbotron'><!--grey background on webpage-->
-    <div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
-    <div class=”row”>
-    <div class="col-xs-1">
+  <!--  <div class="container"><!--centers the div in viewport(the grey box on webpage and adds white space on sides)-->
+    <!--<div class=”row”>
+    <div class="col-xs-1">-->
+			<div class="grid_12">
+				<hr/>
+			</div>
+			<div class="grid_12">
+				<hr/>
+			</div>
+			<table width="500px" height="100%" border="1">
+				<div class="grid_3">
+					<div class="row">
+					<td>
+					<img src="../images/baby.jpeg" alt="baby"/>
+					<figcaption>Write something</figcaption>
+				</td>
+			</div>
