--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 			<a class="navbar-brand" href="#">Craftsy Moments</a>
 	    <div class="nav">
 	      <ul>
-	        <li class="home"><a href="index.html">Home</a></li>
+	        <li class="home"><a class="active"href="index.html">Home</a></li>
 	        <li class="tutorials"><a href="pages/basics.html">Basics</a>
-	          <ul>
+	          <!--<ul>
 	            <li><a href="#">menu</a></li>
 	            <li><a href="#">menu</a></li>
 	            <li><a href="#">menu</a></li>
-	          </ul>
+	          </ul>-->
 	        </li>
-	        <li class="about"><a class="active" href="pages/about.html">About</a></li>
+	        <li class="about"><a href="pages/about.html">About</a></li>
 	        <li class="news"><a href="pages/diy.html">Beauty</a>
 	          <ul>
 	            <li><a href="pages/face.html">Face</a></li>
@@ -74,19 +74,19 @@
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner">
 		    <div class="item active">
-		      <img src="./images/photo.jpg" alt="First pic">
+		      <img src="./images/herb.jpeg" alt="First pic">
 		      <div class="carousel-caption">
 		      	<h3>Caption Text</h3>
 		      </div>
 		    </div>
 		    <div class="item">
-		      <img src="./images/baby.jpg" alt="Second pic">
+		      <img src="./images/hair.jpeg" alt="Second pic">
 		      <div class="carousel-caption">
 		      	<h3>Caption Text</h3>
 		      </div>
 		    </div>
 		    <div class="item">
-		      <img src="./images/love.jpg" alt="third pic">
+		      <img src="./images/oil.jpeg" alt="third pic">
 		      <div class="carousel-caption">
 		      	<h3>Caption Text</h3>
 		      </div>
@@ -106,7 +106,7 @@
 			</div>
 
 			<div class="intro">
-				"Write something, Write something, Write something, Write something, Write something, Write something, Write something,"
+				"Fan those fans of creativity and make great crafts and DIY"
 				<br>
 				"Quote something"
 			</div>
