--- a/pages/diy.html
+++ b/pages/diy.html
@@ -16,16 +16,16 @@
 		<a class="navbar-brand" href="#">Craftsy Moments</a>
     <div class="nav">
       <ul>
-        <li class="home"><a href="../index.html">Home</a></li>
+        <li class="home"><a class="active" href="../index.html">Home</a></li>
         <li class="tutorials"><a href="basics.html">Basics</a>
-          <ul>
+          <!--<ul>
             <li><a href="#">menu</a></li>
             <li><a href="#">menu</a></li>
             <li><a href="#">menu</a></li>
-          </ul>
+          </ul>-->
         </li>
-        <li class="about"><a class="active" href="about.html">About</a></li>
-        <li class="news"><a href="diy.html">DIY</a>
+        <li class="about"><a href="about.html">About</a></li>
+        <li class="news"><a href="diy.html">Beauty</a>
           <ul>
             <li><a href="face.html">Face</a></li>
             <li><a href="hair.html">Hair</a></li>
